<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preferences_actions_title">
    <CheckBoxPreference
        android:key="preferences_history"
        android:defaultValue="true"
        android:title="@string/preferences_history_title"
        android:summary="@string/preferences_history_summary" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_general_title">
    <ListPreference
        android:entries="@array/preferences_front_light_options"
        android:entryValues="@array/preferences_front_light_values"
        android:key="preferences_front_light_mode"
        android:defaultValue="OFF"
        android:title="@string/preferences_front_light_title"
        android:summary="@string/preferences_front_light_summary" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_result_title">
    <EditTextPreference
        android:key="preferences_custom_product_search"
        android:title="@string/preferences_custom_product_search_title"
        android:summary="@string/preferences_custom_product_search_summary" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_device_bug_workarounds_title">
    <CheckBoxPreference
        android:key="preferences_disable_metering"
        android:defaultValue="true"
        android:title="@string/preferences_disable_metering_title" />
    <CheckBoxPreference
        android:key="preferences_disable_barcode_scene_mode"
        android:defaultValue="true"
        android:title="@string/preferences_disable_barcode_scene_mode_title" />
  </PreferenceCategory>
</PreferenceScreen>
